# Spook

./: meson.build
scripts/: svg_to_png_conv.py
src/: spook-common.c  spook-common.h  spook-config.h.in  spook-version.c  spook-version.h.in  spook.h
test/common/: alloc.c  chr_to_str.c  dealloc.c  main.c  main.h  realloc.c  str_to_chr.c  str_to_sint.c  str_to_size.c  str_to_uint.c  str_tok.c
test/version/: main.c
